syntax = "proto3";

package aggregatorItem;

option go_package = "/;aggregatorItem";

service AggregatorItemService {
  rpc GetItemsByCategoryItem (GetItemsByCategoryItemRequest) returns (Items);
}

// Entities:
message Item {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string brand = 4;
  string name = 5;
  string image_link = 6;
  double price = 7;
  string category_id = 8;
}

message Items {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;
  repeated Item items = 4;
}

message GetItemsByGroupItemRequest {
  PaginationRequest pagination_for_items = 1;
  string group_id = 2;

}

message GetItemsByCategoryItemRequest {
  PaginationRequest pagination_for_items = 1;
  string category_id = 2;
}



// Base
message UUID {
  string value = 1;
}

message Empty {
}

message Exist {
  bool value = 1;
}

message PaginationRequest {
  uint32 page = 1;
  int32 limit = 2;
  uint32 offset = 3;
}
